--- a/src/index.css
+++ b/src/index.css
@@ -314,9 +314,9 @@ input[type="number"] {
 
 .delete-btn {
   cursor: pointer;
-  background-color: #e74c3c;
   border: 0;
-  color: #fff;
+  background-color: transparent;
+  color: #e74c3c;
   font-size: 20px;
   line-height: 20px;
   padding: 2px 5px;
