--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -1,2 +1,2 @@
-// @import "abstracts/variables.scss";
-// @import "components/tasks.scss";
+@import "abstracts/variables.scss";
+@import "components/tasks.scss";
